--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-timer</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-dataset</artifactId>
+    </dependency>
 
     <!-- logging -->
     <dependency>
