Improved support for logging to different appenders and classes

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,13 +1,45 @@
 
-appender.out.type = RollingFile
-appender.out.name = out
-appender.out.fileName = logs/camel-kafka-test.log
-appender.out.filePattern = logs/camel-kafka-test-%d{yyyyMMdd-HHmmss}.log
-appender.out.layout.type = PatternLayout
-appender.out.layout.pattern = [%30.30t] %-30.30c{1} %-5p %m%n
-appender.out.policies.type = Policies
-appender.out.policies.size.type = OnStartupTriggeringPolicy
+# Single file
+#appender.out.type = File
+#appender.out.name = file
+#appender.out.fileName = logs/test.log
+#appender.out.layout.type = PatternLayout
+#appender.out.layout.pattern = [%30.30t] %-30.30c{1} %-5p %m%n
+
+appender.rolling-out.type = RollingFile
+appender.rolling-out.name = rolling-out
+appender.rolling-out.fileName = logs/camel-kafka-test.log
+appender.rolling-out.filePattern = logs/camel-kafka-test-%d{yyyyMMdd-HHmmss}.log
+appender.rolling-out.layout.type = PatternLayout
+appender.rolling-out.layout.pattern = [%30.30t] %-30.30c{1} %-5p %m%n
+appender.rolling-out.policies.type = Policies
+appender.rolling-out.policies.size.type = OnStartupTriggeringPolicy
+
+# For console
+appender.console.type = Console
+appender.console.name = console
+appender.console.layout.type = PatternLayout
+appender.console.layout.pattern = [%30.30t] %-30.30c{1} %-5p %m%n
 
 rootLogger.level = INFO
-rootLogger.appenderRef.out.ref = out
+rootLogger.appenderRef.file.ref = rolling-out
+rootLogger.appenderRef.out.ref = console
+
+logger.camel-kafka.name = org.apache.camel.component.kafka.KafkaProducer
+logger.camel-kafka.level = INFO
+logger.camel-kafka.additivity = false
+logger.camel-kafka.appenderRef.file.ref = rolling-out
+
+logger.camel-throughput.name = org.apache.camel.support.processor.ThroughputLogger
+logger.camel-throughput.level = INFO
+logger.camel-throughput.additivity = false
+logger.camel-throughput.appenderRef.file.ref = rolling-out
+logger.camel-throughput.appenderRef.console.ref = console
+
+logger.tester.name = org.apache.camel
+logger.tester.level = WARN
+logger.tester.additivity = false
+logger.tester.appenderRef.file.ref = rolling-out
+
+
 
