Adjusted log level

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -37,7 +37,7 @@ logger.camel-throughput.appenderRef.file.ref = rolling-out
 logger.camel-throughput.appenderRef.console.ref = console
 
 logger.tester.name = org.apache.camel
-logger.tester.level = WARN
+logger.tester.level = INFO
 logger.tester.additivity = false
 logger.tester.appenderRef.file.ref = rolling-out
 
