Stop defaulting to a Camel version. Instead, fail the build if none is given

--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.2.3</version>
+        <version>3.2.4</version>
         <executions>
           <execution>
             <id>share-consumer</id>
@@ -170,7 +170,7 @@
     <profile>
       <id>camel-3.14.0</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <activeByDefault>false</activeByDefault>
       </activation>
       <properties>
         <camel.version>3.14.0-SNAPSHOT</camel.version>
