--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <log4j2-version>2.13.3</log4j2-version>
+    <commons-lang3-version>3.12.0</commons-lang3-version>
+    <junit-jupiter-version>5.8.1</junit-jupiter-version>
   </properties>
 
   <dependencyManagement>
@@ -52,6 +54,11 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-dataset</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>${commons-lang3-version}</version>
+    </dependency>
 
 
     <!-- logging -->
@@ -60,6 +67,12 @@
       <artifactId>log4j-slf4j-impl</artifactId>
       <scope>runtime</scope>
       <version>${log4j2-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${junit-jupiter-version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
