--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -11,7 +11,9 @@ appender.rolling-out.name = rolling-out
 appender.rolling-out.fileName = logs/camel-kafka-test.log
 appender.rolling-out.filePattern = logs/camel-kafka-test-%d{yyyyMMdd-HHmmss}.log
 appender.rolling-out.layout.type = PatternLayout
-appender.rolling-out.layout.pattern = [%30.30t] %-30.30c{1} %-5p %m%n
+# This logs the thread name and so on, but it's usually not helpful
+#appender.rolling-out.layout.pattern = [%30.30t] %-30.30c{1} %-5p %m%n
+appender.rolling-out.layout.pattern = %d{DEFAULT} [%-5p] %m%n
 appender.rolling-out.policies.type = Policies
 appender.rolling-out.policies.size.type = OnStartupTriggeringPolicy
 
@@ -19,16 +21,17 @@ appender.rolling-out.policies.size.type = OnStartupTriggeringPolicy
 appender.console.type = Console
 appender.console.name = console
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = [%30.30t] %-30.30c{1} %-5p %m%n
-
-rootLogger.level = INFO
-rootLogger.appenderRef.file.ref = rolling-out
-rootLogger.appenderRef.out.ref = console
+appender.console.layout.pattern = %m%n
 
 logger.camel-kafka.name = org.apache.camel.component.kafka.KafkaProducer
 logger.camel-kafka.level = INFO
 logger.camel-kafka.additivity = false
 logger.camel-kafka.appenderRef.file.ref = rolling-out
+
+logger.camel-dataset.name = org.apache.camel.component.dataset
+logger.camel-dataset.level = INFO
+logger.camel-dataset.additivity = false
+logger.camel-dataset.appenderRef.file.ref = rolling-out
 
 logger.camel-throughput.name = org.apache.camel.support.processor.ThroughputLogger
 logger.camel-throughput.level = INFO
@@ -37,9 +40,18 @@ logger.camel-throughput.appenderRef.file.ref = rolling-out
 logger.camel-throughput.appenderRef.console.ref = console
 
 logger.tester.name = org.apache.camel
-logger.tester.level = INFO
+logger.tester.level = WARN
 logger.tester.additivity = false
 logger.tester.appenderRef.file.ref = rolling-out
+
+logger.kafka.name = org.apache.kafka
+logger.kafka.level = INFO
+logger.kafka.additivity = false
+logger.kafka.appenderRef.file.ref = rolling-out
+
+rootLogger.level = INFO
+rootLogger.appenderRef.file.ref = rolling-out
+rootLogger.appenderRef.out.ref = console
 
 
 
