Cleaned up the output messages for better usability and readability

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -21,7 +21,7 @@ appender.rolling-out.policies.size.type = OnStartupTriggeringPolicy
 appender.console.type = Console
 appender.console.name = console
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %m%n
+appender.console.layout.pattern = %style{%d{DEFAULT}}{dim} [%highlight{%-5p}] %m%n
 
 logger.camel-kafka.name = org.apache.camel.component.kafka.KafkaProducer
 logger.camel-kafka.level = INFO
@@ -39,10 +39,16 @@ logger.camel-throughput.additivity = false
 logger.camel-throughput.appenderRef.file.ref = rolling-out
 logger.camel-throughput.appenderRef.console.ref = console
 
-logger.tester.name = org.apache.camel
-logger.tester.level = WARN
+logger.camel.name = org.apache.camel
+logger.camel.level = WARN
+logger.camel.additivity = false
+logger.camel.appenderRef.file.ref = rolling-out
+
+logger.tester.name = org.apache.camel.kafka.tester
+logger.tester.level = INFO
 logger.tester.additivity = false
 logger.tester.appenderRef.file.ref = rolling-out
+logger.tester.appenderRef.console.ref = console
 
 logger.kafka.name = org.apache.kafka
 logger.kafka.level = INFO
