--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,29 @@
               <finalName>${project.artifactId}-${camel.version}-producer</finalName>
             </configuration>
           </execution>
+          <execution>
+            <id>share-analyzer</id>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>org.apache.camel.kafka.tester.MainAnalyzer</mainClass>
+                  <manifestEntries>
+                    <Multi-Release>true</Multi-Release>
+                  </manifestEntries>
+                </transformer>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                  <resource>META-INF/services/org/apache/camel/TypeConverterLoader</resource>
+                </transformer>
+              </transformers>
+              <shadedArtifactAttached>true</shadedArtifactAttached>
+              <shadedClassifierName>executable-jar</shadedClassifierName>
+              <finalName>${project.artifactId}-${camel.version}-analyzer</finalName>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
     </plugins>
