--- a/kafka-testers/kafka-tester-analyzer/pom.xml
+++ b/kafka-testers/kafka-tester-analyzer/pom.xml
@@ -11,6 +11,19 @@
 
     <artifactId>kafka-tester-analyzer</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.knowm.xchart</groupId>
+            <artifactId>xchart</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+        </dependency>
+    </dependencies>
+
+
     <build>
         <plugins>
             <plugin>
