--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <log4j2-version>2.16.0</log4j2-version>
     <commons-lang3-version>3.12.0</commons-lang3-version>
+    <commons-math3-version>3.6.1</commons-math3-version>
     <hdr-histogram-version>2.1.12</hdr-histogram-version>
     <junit-jupiter-version>5.8.1</junit-jupiter-version>
     <xchart-version>3.5.0</xchart-version>
@@ -39,6 +40,11 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>${commons-lang3-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-math3</artifactId>
+        <version>${commons-math3-version}</version>
       </dependency>
       <dependency>
         <groupId>org.hdrhistogram</groupId>
