Fixed final deliverable names

--- a/kafka-testers/kafka-tester-analyzer/pom.xml
+++ b/kafka-testers/kafka-tester-analyzer/pom.xml
@@ -51,7 +51,7 @@
                             </transformers>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
                             <shadedClassifierName>executable-jar</shadedClassifierName>
-                            <finalName>${project.artifactId}-${camel.version}-analyzer</finalName>
+                            <finalName>${project.artifactId}-${camel.version}</finalName>
                         </configuration>
                     </execution>
                 </executions>
