More logging cleanups

--- a/kafka-testers/kafka-tester-analyzer/src/main/resources/log4j2.properties
+++ b/kafka-testers/kafka-tester-analyzer/src/main/resources/log4j2.properties
@@ -10,7 +10,7 @@
 appender.console.type = Console
 appender.console.name = console
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %style{%d{DEFAULT}}{dim} [%highlight{%-5p}] %m%n
+appender.console.layout.pattern = %m%n
 
 logger.camel.name = org.apache.camel
 logger.camel.level = WARN
