--- a/kafka-testers/kafka-tester-analyzer/pom.xml
+++ b/kafka-testers/kafka-tester-analyzer/pom.xml
@@ -21,6 +21,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-engine-core</artifactId>
+        </dependency>
     </dependencies>
 
 
