--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,15 @@
         <camel.version>3.15.0</camel.version>
       </properties>
     </profile>
+    <profile>
+      <id>camel-3.16.0</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <properties>
+        <camel.version>3.16.0-SNAPSHOT</camel.version>
+      </properties>
+    </profile>
   </profiles>
 
   <modules>
