--- a/scripts/ansible/group_vars/all.yaml
+++ b/scripts/ansible/group_vars/all.yaml
@@ -1,12 +1,7 @@
 kafka_user: "{{ lookup('env','USER') }}"
 kafka_version: 2.8.1
 scala_version: 2.13
-# For CZ
-kafka_download_url: https://apache.miloslavbrada.cz/kafka/{{ kafka_version }}/kafka_{{ scala_version }}-{{ kafka_version }}.tgz
-
-# For US:
-# kafka_download_url: https://mirrors.advancedhosters.com/apache/kafka/{{ kafka_version }}/kafka_{{ scala_version }}-{{ kafka_version }}.tgz
-
+kafka_download_url: https://archive.apache.org/dist/kafka/{{ kafka_version }}/kafka_{{ scala_version }}-{{ kafka_version }}.tgz
 kafka_download_dest: /home/{{ kafka_user }}/tmp
 kafka_install_dest: /home/{{ kafka_user}}/tools
 kafka_plugin_path: /home/{{ kafka_user}}/tools/camel-kafka-connectors
