Install the correct set of additional packages

--- a/scripts/ansible/roles/kafka-tester/vars/main.yml
+++ b/scripts/ansible/roles/kafka-tester/vars/main.yml
@@ -1,2 +1,2 @@
 admin_groups: users, wheel
-kafka_tester_common_packages: git,java-11-openjdk-devel,zsh,wget,unzip,cockpit,cockpit-pcp
+kafka_tester_common_packages: git,tmux,zsh,wget,unzip,cockpit,cockpit-pcp
