SELinux adjustment should run with proper privileges

--- a/scripts/ansible/roles/kafka-tester/tasks/main.yml
+++ b/scripts/ansible/roles/kafka-tester/tasks/main.yml
@@ -23,6 +23,7 @@
     state: present
 
 - name: Put SELinux in permissive mode, logging actions that would be blocked.
+  become: yes
   ansible.posix.selinux:
     policy: targeted
     state: permissive
