Updated test library versions

--- a/scripts/runner/consumer/tests/3.12.0/thread-50.env
+++ b/scripts/runner/consumer/tests/3.12.0/thread-50.env
@@ -1,5 +1,5 @@
 TEST_NAME=thread-50
-CAMEL_VERSION=3.12.0-SNAPSHOT
+CAMEL_VERSION=3.12.0
 CONSUMER_MESSAGE_COUNT=1000000000
 MESSAGE_SIZE=10
 CONSUMERS=50
