--- a/scripts/runner/consumer/tests/3.14.0/single-thread.env
+++ b/scripts/runner/consumer/tests/3.14.0/single-thread.env
@@ -1,5 +1,5 @@
 TEST_NAME=single-thread
-CAMEL_VERSION=3.14.0-SNAPSHOT
+CAMEL_VERSION=3.14.0
 CONSUMER_MESSAGE_COUNT=500000000
 MESSAGE_SIZE=10
 CONSUMERS=1
