--- a/scripts/runner/producer/tests/3.11.5/default-settings.env
+++ b/scripts/runner/producer/tests/3.11.5/default-settings.env
@@ -1,4 +1,4 @@
 TEST_NAME=default-settings
-CAMEL_VERSION=3.11.5-SNAPSHOT
+CAMEL_VERSION=3.11.5
 PRODUCER_MESSAGE_COUNT=25000000
 JAVA_OPTS="-Xms4G -Xmx4G"
