--- a/scripts/runner/producer/tests/3.14.0/batch-size-2.env
+++ b/scripts/runner/producer/tests/3.14.0/batch-size-2.env
@@ -1,4 +1,4 @@
-TEST_NAME=batch-5
-CAMEL_VERSION=3.14.0-SNAPSHOT
+TEST_NAME=batch-2
+CAMEL_VERSION=3.14.1
 PRODUCER_MESSAGE_COUNT=250000000
 JAVA_OPTS="-Xms4G -Xmx4G -Dtest.batch.size=2"
