--- a/scripts/runner/consumer/tests/3.12.0/thread-10.env
+++ b/scripts/runner/consumer/tests/3.12.0/thread-10.env
@@ -1,6 +1,5 @@
 TEST_NAME=thread-10
-CAMEL_VERSION=3.14.0-SNAPSHOT
+CAMEL_VERSION=3.12.0
 CONSUMER_MESSAGE_COUNT=1000000000
 MESSAGE_SIZE=10
 CONSUMERS=10
-JAVA_OPTS="-Xms4G -Xmx4G"
