--- a/scripts/runner/consumer/tests/3.14.0/thread-2.env
+++ b/scripts/runner/consumer/tests/3.14.0/thread-2.env
@@ -1,6 +1,6 @@
-TEST_NAME=thread-10
-CAMEL_VERSION=3.15.0-SNAPSHOT
+TEST_NAME=thread-2
+CAMEL_VERSION=3.14.0
 CONSUMER_MESSAGE_COUNT=1000000000
 MESSAGE_SIZE=10
-CONSUMERS=10
+CONSUMERS=2
 JAVA_OPTS="-Xms4G -Xmx4G"
