--- a/scripts/runner/consumer/tests/3.15.0/thread-5.env
+++ b/scripts/runner/consumer/tests/3.15.0/thread-5.env
@@ -1,5 +1,6 @@
 TEST_NAME=thread-5
-CAMEL_VERSION=3.12.0-SNAPSHOT
+CAMEL_VERSION=3.15.0
 CONSUMER_MESSAGE_COUNT=1000000000
 MESSAGE_SIZE=10
 CONSUMERS=5
+JAVA_OPTS="-Xms4G -Xmx4G"
