--- a/scripts/runner/producer/tests/3.14.0/default-settings.env
+++ b/scripts/runner/producer/tests/3.14.0/default-settings.env
@@ -1,4 +1,4 @@
 TEST_NAME=default-settings
-CAMEL_VERSION=3.14.0-SNAPSHOT
+CAMEL_VERSION=3.14.1
 PRODUCER_MESSAGE_COUNT=25000000
 JAVA_OPTS="-Xms4G -Xmx4G"
