Fixed version for Camel 3.14

--- a/scripts/runner/consumer/tests/3.14.0/single-thread.env
+++ b/scripts/runner/consumer/tests/3.14.0/single-thread.env
@@ -1,6 +1,7 @@
 TEST_NAME=single-thread
-CAMEL_VERSION=3.14.0
-CONSUMER_MESSAGE_COUNT=500000000
+CAMEL_VERSION=3.14.1
+# CONSUMER_MESSAGE_COUNT=500000000
+CONSUMER_MESSAGE_COUNT=5000000
 MESSAGE_SIZE=10
 CONSUMERS=1
 JAVA_OPTS="-Xms4G -Xmx4G"
