WIP: to support observability

--- a/kafka-testers/kafka-tester-consumer/pom.xml
+++ b/kafka-testers/kafka-tester-consumer/pom.xml
@@ -15,6 +15,13 @@
 
   <name>Camel Kafka Tester Consumer</name>
 
+  <dependencies>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-influx</artifactId>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <plugin>
