--- a/kafka-testers/pom.xml
+++ b/kafka-testers/pom.xml
@@ -34,9 +34,14 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-timer</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-dataset</artifactId>
+            <artifactId>camel-micrometer</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-health</artifactId>
         </dependency>
 
         <dependency>
