--- a/kafka-testers/pom.xml
+++ b/kafka-testers/pom.xml
@@ -42,6 +42,10 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-dataset</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-seda</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.camel</groupId>
