--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <log4j2-version>2.16.0</log4j2-version>
+
     <commons-lang3-version>3.12.0</commons-lang3-version>
     <commons-math3-version>3.6.1</commons-math3-version>
     <hdr-histogram-version>2.1.12</hdr-histogram-version>
@@ -67,13 +67,6 @@
       </dependency>
 
       <!-- logging -->
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-slf4j-impl</artifactId>
-        <scope>runtime</scope>
-        <version>${log4j2-version}</version>
-      </dependency>
-
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
@@ -190,15 +183,7 @@
       </activation>
       <properties>
         <camel.version>3.18.3</camel.version>
-      </properties>
-    </profile>
-    <profile>
-      <id>camel-3.19</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <properties>
-        <camel.version>3.19.0</camel.version>
+        <log4j2-version>2.17.2</log4j2-version>
       </properties>
     </profile>
     <profile>
@@ -207,8 +192,44 @@
         <activeByDefault>false</activeByDefault>
       </activation>
       <properties>
-        <camel.version>3.20.0-SNAPSHOT</camel.version>
+        <camel.version>3.20.0</camel.version>
+        <log4j2-version>2.18.0</log4j2-version>
       </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j-impl</artifactId>
+          <scope>runtime</scope>
+          <version>${log4j2-version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>camel-4.0</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <properties>
+        <camel.version>4.0.0-SNAPSHOT</camel.version>
+        <log4j2-version>2.19.0</log4j2-version>
+        <slf4j-version>2.0.6</slf4j-version>
+      </properties>
+
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j2-impl</artifactId>
+          <scope>runtime</scope>
+          <version>${log4j2-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <scope>runtime</scope>
+          <version>${log4j2-version}</version>
+        </dependency>
+
+      </dependencies>
     </profile>
   </profiles>
 
