Default to Java 17

--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
   <packaging>pom</packaging>
   <version>1.0.0-SNAPSHOT</version>
 
-
   <name>Camel Kafka Tester</name>
 
   <properties>
+    <maven.compiler.release>17</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
