--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,10 @@
 
     <commons-lang3-version>3.12.0</commons-lang3-version>
     <commons-math3-version>3.6.1</commons-math3-version>
+    <commons-exec-version>1.3</commons-exec-version>
     <hdr-histogram-version>2.1.12</hdr-histogram-version>
     <junit-jupiter-version>5.8.1</junit-jupiter-version>
+    <picocli-version>4.7.1</picocli-version>
     <xchart-version>3.8.1</xchart-version>
     <velocity-version>2.3</velocity-version>
     <maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
@@ -48,9 +50,19 @@
         <version>${commons-math3-version}</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-exec</artifactId>
+        <version>${commons-exec-version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.hdrhistogram</groupId>
         <artifactId>HdrHistogram</artifactId>
         <version>${hdr-histogram-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>info.picocli</groupId>
+        <artifactId>picocli</artifactId>
+        <version>${picocli-version}</version>
       </dependency>
 
       <!-- Plotting -->
@@ -77,6 +89,7 @@
         <artifactId>log4j-core</artifactId>
         <version>${log4j2-version}</version>
       </dependency>
+
 
       <!-- testing -->
       <dependency>
@@ -237,6 +250,7 @@
     <module>kafka-tester-io</module>
     <module>kafka-tester-common</module>
     <module>kafka-testers</module>
+    <module>controllers</module>
 
   </modules>
 
