--- a/controllers/controller-cli/pom.xml
+++ b/controllers/controller-cli/pom.xml
@@ -56,7 +56,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.apache.camel.kafka.controller.cli.ControllerCliMain</mainClass>
+                                    <mainClass>org.apache.camel.controller.cli.ControllerCliMain</mainClass>
                                     <manifestEntries>
                                         <Multi-Release>true</Multi-Release>
                                     </manifestEntries>
