--- a/controllers/controller-test/pom.xml
+++ b/controllers/controller-test/pom.xml
@@ -40,7 +40,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.apache.camel.kafka.controller.test.MainTestController</mainClass>
+                                    <mainClass>org.apache.camel.controller.test.MainTestController</mainClass>
                                     <manifestEntries>
                                         <Multi-Release>true</Multi-Release>
                                     </manifestEntries>
