--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,14 @@
         <camel.version>3.18.5</camel.version>
         <log4j2-version>2.17.2</log4j2-version>
       </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j-impl</artifactId>
+          <scope>runtime</scope>
+          <version>${log4j2-version}</version>
+        </dependency>
+      </dependencies>
     </profile>
     <profile>
       <id>camel-3.20</id>
