Added support for Camel 4.0.0-M1

--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,32 @@
       </dependencies>
     </profile>
     <profile>
+      <id>camel-4.0.0-M1</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <properties>
+        <camel.version>4.0.0-M1</camel.version>
+        <log4j2-version>2.19.0</log4j2-version>
+        <slf4j-version>2.0.6</slf4j-version>
+      </properties>
+
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j2-impl</artifactId>
+          <scope>runtime</scope>
+          <version>${log4j2-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <scope>runtime</scope>
+          <version>${log4j2-version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
       <id>camel-4.0</id>
       <activation>
         <activeByDefault>false</activeByDefault>
