--- a/kafka-testers/pom.xml
+++ b/kafka-testers/pom.xml
@@ -41,6 +41,11 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-seda</artifactId>
         </dependency>
+        <!-- This enables JMX management for Camel -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-management</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.camel</groupId>
