--- a/kafka-testers/pom.xml
+++ b/kafka-testers/pom.xml
@@ -41,6 +41,10 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-seda</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jackson</artifactId>
+        </dependency>
         <!-- This enables JMX management for Camel -->
         <dependency>
             <groupId>org.apache.camel</groupId>
