Do not use colors by default

--- a/kafka-testers/kafka-tester-producer/src/main/resources/log4j2.properties
+++ b/kafka-testers/kafka-tester-producer/src/main/resources/log4j2.properties
@@ -21,7 +21,9 @@ appender.rolling-out.policies.size.type = OnStartupTriggeringPolicy
 appender.console.type = Console
 appender.console.name = console
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %style{%d{DEFAULT}}{dim} [%highlight{%-5p}] %m%n
+# To enable colors
+#appender.console.layout.pattern = %style{%d{DEFAULT}}{dim} [%highlight{%-5p}] %m%n
+appender.console.layout.pattern = %d{DEFAULT} [%-5p] %m%n
 
 logger.camel-kafka.name = org.apache.camel.component.kafka.KafkaProducer
 logger.camel-kafka.level = INFO
