--- a/kafka-testers/pom.xml
+++ b/kafka-testers/pom.xml
@@ -46,10 +46,10 @@
             <artifactId>camel-jackson</artifactId>
         </dependency>
         <!-- This enables JMX management for Camel -->
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-management</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.camel</groupId>-->
+<!--            <artifactId>camel-management</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.apache.camel</groupId>
