--- a/controllers/pom.xml
+++ b/controllers/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <kafka-client-version>3.2.3</kafka-client-version>
         <jackson-version>2.14.2</jackson-version>
+        <maven.compiler.release>17</maven.compiler.release>
     </properties>
 
     <dependencyManagement>
