--- a/kafka-testers/pom.xml
+++ b/kafka-testers/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>kafka-testers</artifactId>
     <packaging>pom</packaging>
 
+    <properties>
+        <maven.compiler.release>17</maven.compiler.release>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.camel</groupId>
